added link to current session

--- a/btc-app/src/app/session/session.component.html
+++ b/btc-app/src/app/session/session.component.html
@@ -14,7 +14,7 @@
         </ul>
 
         <p>
-            <button (click)="shareSession(session.id)">Share session!</button>
+            {{sessionLink(session.id)}}
         </p>
 
         <div>
