session linked properly

--- a/btc-app/src/app/session/session.component.html
+++ b/btc-app/src/app/session/session.component.html
@@ -14,7 +14,7 @@
         </ul>
 
         <p>
-            {{sessionLink(session.id)}}
+            <a [href]="sessionLink(session.id)" target="_blank">{{sessionLink(session.id)}}</a>
         </p>
 
         <div>
