--- a/btc-app/src/app/session/session.component.html
+++ b/btc-app/src/app/session/session.component.html
@@ -18,8 +18,10 @@
         </p>
 
         <div>
-            <input type="text" [formControl]="messageControl">
-            <button (click)="sendMessage(session)">Click!</button>
+            <span *ngIf="isSessionHost(session)">
+                <input type="text" [formControl]="messageControl">
+                <button (click)="sendMessage(session)">Click!</button>
+            </span>
             <span *ngIf="currentMessage$ | async as message"> </span>
             <ul>
                 <li *ngFor="let msg of messages| async">
