--- a/src/app/session/session.component.html
+++ b/src/app/session/session.component.html
@@ -11,7 +11,7 @@
         <div>
             <span *ngIf="isSessionHost(session)">
                 <input type="text" [formControl]="messageControl">
-                <button (click)="sendMessage(session)">Click!</button>
+                <button (click)="sendMessage(session)" [disabled]="messageControl.invalid">Click!</button>
             </span>
             <span *ngIf="currentMessage$ | async as message"> </span>
             <ul>
