--- a/src/app/session/session.component.html
+++ b/src/app/session/session.component.html
@@ -1,27 +1,23 @@
-<p>
-    Session Name <input type="text" [formControl]="nameControl">
-    <button (click)="registerSession()" [disabled]="nameControl.invalid || isConnected">Register Session!</button>
-</p>
-
-<div>
+<div *ngIf="currentSession$ | async as session;else noSession">
     <h1>Current Session</h1>
-    <div *ngIf="currentSession$ | async as session;else noSession">
-        <app-session-info [session]="session"></app-session-info>
 
-        <div>
-            <span *ngIf="isSessionHost(session)">
-                <input type="text" [formControl]="messageControl">
-                <button (click)="sendMessage(session)" [disabled]="messageControl.invalid">Click!</button>
-            </span>
-            <span *ngIf="currentMessage$ | async as message"> </span>
-            <ul>
-                <li *ngFor="let msg of messages| async">
-                    {{msg}}
-                </li>
-            </ul>
-        </div>
+    <app-session-info [session]="session"></app-session-info>
+
+    <div>
+        <span *ngIf="isSessionHost(session)">
+            <input type="text" [formControl]="messageControl">
+            <button (click)="sendMessage(session)" [disabled]="messageControl.invalid">Click!</button>
+        </span>
+        <span *ngIf="currentMessage$ | async as message"> </span>
+        <ul>
+            <li *ngFor="let msg of messages| async">
+                {{msg}}
+            </li>
+        </ul>
     </div>
-    <ng-template #noSession>
-        No session was created so far...
-    </ng-template>
 </div>
+
+<ng-template #noSession>
+    Please create a session or hook up into an existing one<br />
+    <app-session-creator (nameChange)="registerSession($event)"></app-session-creator>
+</ng-template>
