--- a/src/app/session/session.component.html
+++ b/src/app/session/session.component.html
@@ -3,18 +3,25 @@
 
     <app-session-info [session]="session"></app-session-info>
 
-    <div>
+    <div *ngIf="isSessionHost(session);else user">
+        <h2>Host Actions</h2>
         <span *ngIf="isSessionHost(session)">
             <input type="text" [formControl]="messageControl">
             <button (click)="sendMessage(session)" [disabled]="messageControl.invalid">Click!</button>
         </span>
         <span *ngIf="currentMessage$ | async as message"> </span>
-        <ul>
-            <li *ngFor="let msg of messages| async">
-                {{msg}}
-            </li>
-        </ul>
     </div>
+    <ng-template #user>
+        <h2>User Actions</h2>
+        You're a user :)
+    </ng-template>
+
+    <h2>Shared Messages</h2>
+    <ul>
+        <li *ngFor="let msg of messages| async">
+            {{msg}}
+        </li>
+    </ul>
 </div>
 
 <ng-template #noSession>
