introduced session to user view

--- a/src/app/session/session.component.html
+++ b/src/app/session/session.component.html
@@ -7,7 +7,7 @@
         <app-sessions-host [session]="session"></app-sessions-host>
     </div>
     <ng-template #user>
-        <app-sessions-user></app-sessions-user>
+        <app-sessions-user [session]="session"></app-sessions-user>
     </ng-template>
 
     <h2>Shared Messages</h2>
