--- a/src/app/views/session-creator/session-creator.component.html
+++ b/src/app/views/session-creator/session-creator.component.html
@@ -1,6 +1,6 @@
 <p>
     Session Name <input type="text" [formControl]="nameControl">
-    <span *ngIf="$nameControl | async as name">
+    <span *ngIf="nameControl$ | async as name">
         <button (click)="nameChange.emit(name)" [disabled]="nameControl.invalid">Register session</button>
     </span>
 </p>
