--- a/src/app/session/feature/main/main.page.scss
+++ b/src/app/session/feature/main/main.page.scss
@@ -3,12 +3,8 @@ ion-menu-button {
 }
 
 #container {
-    text-align: center;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
+    align-items: center;
+    margin: 2em;
 }
 
 #container strong {
