--- a/src/app/session/feature/message-center/message-center.component.html
+++ b/src/app/session/feature/message-center/message-center.component.html
@@ -1,4 +1,5 @@
 <h2>Shared Messages</h2>
+<app-send-message [senderId]="user?.id ?? session.id" (messageSend)="sendMessage($event)"></app-send-message>
 <ion-list>
   <ion-item *ngFor="let message of messages$ | async">
     <ion-card [slot]="isMe(message) ? 'end' : 'start'">
