--- a/src/app/session/feature/main/main.page.html
+++ b/src/app/session/feature/main/main.page.html
@@ -17,7 +17,10 @@
 
       <ion-segment value="session-info" [(ngModel)]="type">
         <ion-segment-button value="session-info">
-          <ion-label>Session Info</ion-label>
+          <ion-label>Session</ion-label>
+        </ion-segment-button>
+        <ion-segment-button value="user-action">
+          <ion-label>User</ion-label>
         </ion-segment-button>
         <ion-segment-button value="message-center">
           <ion-label>Message Center</ion-label>
@@ -27,11 +30,13 @@
       <div [ngSwitch]="type">
         <div *ngSwitchCase="'session-info'">
           <app-session-info [session]="session"></app-session-info>
+        </div>
+        <div *ngSwitchCase="'user-action'">
           <div *ngIf="isSessionHost(session);else userInfo">
             <app-host [session]="session"></app-host>
           </div>
           <ng-template #userInfo>
-            <app-user [session]="session" (userChange)="setUser($event)"></app-user>
+            <app-user [session]="session" [user]="user" (userChange)="setUser($event)"></app-user>
           </ng-template>
         </div>
         <div *ngSwitchCase="'message-center'">
