--- a/src/app/session/feature/main/main.page.html
+++ b/src/app/session/feature/main/main.page.html
@@ -1,6 +1,9 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>Session</ion-title>
+    <ion-buttons slot="end" end>
+      <ion-button ion-button color="royal" (click)="logOut()">log out</ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
