--- a/src/app/session/feature/main/main.page.html
+++ b/src/app/session/feature/main/main.page.html
@@ -25,7 +25,7 @@
         <ion-segment-button value="user-action" *ngIf="!isSessionHost(session)">
           <ion-label>User</ion-label>
         </ion-segment-button>
-        <ion-segment-button value=" message-center">
+        <ion-segment-button value="message-center" *ngIf="user || isSessionHost(session)">
           <ion-label>Message Center</ion-label>
         </ion-segment-button>
       </ion-segment>
