--- a/src/app/session/ui/session-info/session-info.component.html
+++ b/src/app/session/ui/session-info/session-info.component.html
@@ -20,6 +20,10 @@
     <ion-label>{{session.expirationTime}}</ion-label>
   </ion-item>
   <ion-item>
+    <ion-label>SimulationType</ion-label>
+    <ion-label>{{session.configuration?.simulationType}}</ion-label>
+  </ion-item>
+  <ion-item>
     <ion-label>Link </ion-label>
     <ion-label>
       <a [href]="sessionLink" target="_blank">{{sessionLink}}</a>
