added qr to session info

--- a/src/app/session/ui/session-info/session-info.component.html
+++ b/src/app/session/ui/session-info/session-info.component.html
@@ -30,3 +30,5 @@
     </ion-label>
   </ion-item>
 </ion-list>
+
+<qrcode [qrdata]="sessionLink" [width]="256" [errorCorrectionLevel]="'L'"></qrcode>
