--- a/src/app/session/feature/host/host.component.html
+++ b/src/app/session/feature/host/host.component.html
@@ -1,5 +1,9 @@
 <h2>Host Actions</h2>
 
+<span *ngIf="!(sessionUpdates$ | async)">
+  Loading...
+</span>
+
 <div>
   <ion-toolbar>
     <ion-button fill="clear" (click)="prepare()" [disabled]="session.status !== 'notStarted'">
@@ -15,8 +19,7 @@
       Clear Session
     </ion-button>
     <ion-badge slot="end">
-      <span *ngIf="sessionStatus$ | async as sessionStatus;else notLoaded">{{sessionStatus.status}}</span>
-      <ng-template #notLoaded>{{session.status}}</ng-template>
+      {{session.status}}
     </ion-badge>
   </ion-toolbar>
 </div>
