--- a/src/app/session/feature/host/host.component.html
+++ b/src/app/session/feature/host/host.component.html
@@ -1,9 +1,5 @@
 <h2>Host Actions</h2>
 
-<span *ngIf="!(sessionUpdates$ | async)">
-  Loading...
-</span>
-
 <div>
   <ion-toolbar>
     <ion-button fill="clear" (click)="prepare()" [disabled]="session.status !== 'notStarted'">
@@ -19,7 +15,12 @@
       Clear Session
     </ion-button>
     <ion-badge slot="end">
-      {{session.status}}
+      <span *ngIf="sessionUpdates$ | async as status;else notUpdated">
+        Updated: {{status}}
+      </span>
+      <ng-template #notUpdated>
+        {{session.status}}
+      </ng-template>
     </ion-badge>
   </ion-toolbar>
 </div>
