--- a/src/app/session/ui/session-info/session-info.component.html
+++ b/src/app/session/ui/session-info/session-info.component.html
@@ -23,6 +23,10 @@
     <ion-label>SimulationType</ion-label>
     <ion-label>{{session.configuration.simulationType}}</ion-label>
   </ion-item>
+  <ion-item *ngIf="session.configuration">
+    <ion-label>HashRate</ion-label>
+    <ion-label>{{session.configuration.simulationType.hashRate}}</ion-label>
+  </ion-item>
   <ion-item>
     <ion-label>Link </ion-label>
     <ion-label>
