--- a/src/app/session/ui/session-info/session-info.component.html
+++ b/src/app/session/ui/session-info/session-info.component.html
@@ -25,7 +25,7 @@
   </ion-item>
   <ion-item *ngIf="session.configuration">
     <ion-label>HashRate</ion-label>
-    <ion-label>{{session.configuration.simulationType.hashRate}}</ion-label>
+    <ion-label>{{session.configuration.hashRate}}</ion-label>
   </ion-item>
   <ion-item>
     <ion-label>Link </ion-label>
