--- a/src/app/session/ui/session-info/session-info.component.html
+++ b/src/app/session/ui/session-info/session-info.component.html
@@ -23,10 +23,24 @@
     <ion-label>SimulationType</ion-label>
     <ion-label>{{session.configuration.simulationType}}</ion-label>
   </ion-item>
-  <ion-item *ngIf="session.configuration">
-    <ion-label>HashRate</ion-label>
-    <ion-label>{{session.configuration.hashRate}}</ion-label>
-  </ion-item>
+  <div *ngIf="session.configuration?.simulationType === 'proofOfWork'">
+    <ion-item>
+      <ion-label>HashRate</ion-label>
+      <ion-label>{{session.configuration.totalHashRate}}</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>SecondsUntilBlock</ion-label>
+      <ion-label>{{session.configuration.secondsUntilBlock}}</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Difficulty</ion-label>
+      <ion-label>{{session.configuration.difficulty}}</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Threshold</ion-label>
+      <ion-label>{{session.configuration.threshold}}</ion-label>
+    </ion-item>
+  </div>
   <ion-item>
     <ion-label>Link </ion-label>
     <ion-label>
