--- a/src/app/session/ui/hash-list/hash-list.component.html
+++ b/src/app/session/ui/hash-list/hash-list.component.html
@@ -1,4 +1,4 @@
-<ion-list *ngFor="let block of blocks$ | async ">
+<ion-list *ngFor="let block of blocks">
   <ion-item>
     <ion-label>{{block.text}}</ion-label>
     <ion-label>{{block.hash}}</ion-label>
