draft implementation shows winner

--- a/src/app/session/feature/user/user.component.html
+++ b/src/app/session/feature/user/user.component.html
@@ -47,6 +47,8 @@
 
       <h3>Stopped</h3>
 
+      <app-hash-list [session]="session" [user]="user" #hashList></app-hash-list>
+
     </div>
   </div>
 
