--- a/src/app/session/feature/main/main.page.html
+++ b/src/app/session/feature/main/main.page.html
@@ -39,7 +39,7 @@
           <app-user-info [session]="session"></app-user-info>
         </div>
         <div *ngSwitchCase="'user-action'">
-          <app-user [session]="session" (userChange)="userView.getUser($event)" #userView></app-user>
+          <app-user [session]="session" [user]="user" (userChange)="setUser($event)" #userView></app-user>
         </div>
         <div *ngSwitchCase="'message-center'">
           <app-message-center [session]="session" [user]="user" [messages]="messages"></app-message-center>
