--- a/src/app/session/ui/hash-list/hash-list.component.html
+++ b/src/app/session/ui/hash-list/hash-list.component.html
@@ -1,24 +1,29 @@
-<div *ngIf="session?.status === 'stopped' || user?.status === 'done';else work">
-  <span *ngIf="isMe" class="winner">
-    <ion-icon name="trophy-outline"></ion-icon>
-  </span>
-  <span *ngIf="!isMe" class="loser">
-    <ion-icon name="close-circle-outline"></ion-icon>
-  </span>
-  <ion-list>
-    <ion-item>
-      <ion-label>Winner</ion-label>
-      <ion-text>{{winner}}</ion-text>
-    </ion-item>
-    <ion-item>
-      <ion-label>Text</ion-label>
-      <ion-text>{{winnerBlock.text}}</ion-text>
-    </ion-item>
-    <ion-item>
-      <ion-label>Hash</ion-label>
-      <ion-text>{{winnerBlock.hash}}</ion-text>
-    </ion-item>
-  </ion-list>
+<div *ngIf="session?.status === 'stopped';else work">
+  <div *ngIf="user?.status === 'notReady';else userView">
+    Session is over, please wait until next round!
+  </div>
+  <ng-template #userView>
+    <span *ngIf="isMe" class="winner">
+      <ion-icon name="trophy-outline"></ion-icon>
+    </span>
+    <span *ngIf="!isMe" class="loser">
+      <ion-icon name="close-circle-outline"></ion-icon>
+    </span>
+    <ion-list>
+      <ion-item>
+        <ion-label>Winner</ion-label>
+        <ion-text>{{winner}}</ion-text>
+      </ion-item>
+      <ion-item>
+        <ion-label>Text</ion-label>
+        <ion-text>{{winnerBlock.text}}</ion-text>
+      </ion-item>
+      <ion-item>
+        <ion-label>Hash</ion-label>
+        <ion-text>{{winnerBlock.hash}}</ion-text>
+      </ion-item>
+    </ion-list>
+  </ng-template>
 </div>
 <ng-template #work>
   <ion-list *ngFor="let block of blocks">
