--- a/src/app/session/feature/main/main.page.html
+++ b/src/app/session/feature/main/main.page.html
@@ -32,14 +32,15 @@
         </ion-segment-button>
       </ion-segment>
 
-      <div [ngSwitch]="type" *ngIf="hubConnection$ | async">
+      <div [ngSwitch]="type" *ngIf="hubConnection$ | async as hubConnection">
         <div *ngSwitchCase="'session-info'">
           <app-host [session]="session" *ngIf="isSessionHost(session)"></app-host>
           <app-session-info [session]="session"></app-session-info>
           <app-user-info [session]="session"></app-user-info>
         </div>
         <div *ngSwitchCase="'user-action'">
-          <app-user [session]="session" [user]="user" (userChange)="setUser($event)" #userView></app-user>
+          <app-user [session]="session" [user]="user" [hubConnection]="hubConnection" (userChange)="setUser($event)"
+            #userView></app-user>
         </div>
         <div *ngSwitchCase="'message-center'">
           <app-message-center [session]="session" [user]="user" [messages]="messages"></app-message-center>
