--- a/src/app/session/ui/session-info/session-info.component.html
+++ b/src/app/session/ui/session-info/session-info.component.html
@@ -24,29 +24,13 @@
     <ion-label>{{session.configuration.simulationType}}</ion-label>
   </ion-item>
   <div *ngIf="session.configuration?.simulationType === 'proofOfWork'">
-    <ion-item>
-      <ion-label>HashRate</ion-label>
-      <ion-label>{{session.configuration.totalHashRate}}</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>SecondsUntilBlock</ion-label>
-      <ion-label>{{session.configuration.secondsUntilBlock}}</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Difficulty</ion-label>
-      <ion-label>{{session.configuration.difficulty}}</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Threshold</ion-label>
-      <ion-label>{{session.configuration.threshold}}</ion-label>
-    </ion-item>
+    <app-proof-of-work [session]="session"></app-proof-of-work>
   </div>
   <ion-item>
     <ion-label>Link </ion-label>
     <ion-label>
       <a [href]="sessionLink" target="_blank">{{sessionLink}}</a>
+      <qrcode [qrdata]="sessionLink" [width]="256" [errorCorrectionLevel]="'L'"></qrcode>
     </ion-label>
   </ion-item>
 </ion-list>
-
-<qrcode [qrdata]="sessionLink" [width]="256" [errorCorrectionLevel]="'L'"></qrcode>
