fixed width of qr code

--- a/src/app/session/ui/session-info/session-info.component.html
+++ b/src/app/session/ui/session-info/session-info.component.html
@@ -30,7 +30,7 @@
     <ion-label>Link </ion-label>
     <ion-label>
       <a [href]="sessionLink" target="_blank">{{sessionLink}}</a>
-      <qrcode [qrdata]="sessionLink" [width]="256" [errorCorrectionLevel]="'L'"></qrcode>
+      <qrcode [qrdata]="sessionLink" [errorCorrectionLevel]="'L'"></qrcode>
     </ion-label>
   </ion-item>
 </ion-list>
